--- a/screencast/348-pancakeswap-trading-bot/package.json
+++ b/screencast/348-pancakeswap-trading-bot/package.json
@@ -1,18 +1,10 @@
 {
   "name": "348-pancakeswap-trading-bot",
   "version": "1.0.0",
-  "description": "",
-  "main": "script.js",
-  "directories": {
-    "test": "test"
-  },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "main": "bot.js",
+  "license": "MIT",
   "dependencies": {
-    "ethers": "^5.0.32"
+    "config": "^3.3.6",
+    "ethers": "^5.2.0"
   }
 }
